# Haskell-100-days-of-coding

./: .gitignore  Functional Programming 2.1.docx  Haskell notes.docx  README.md  assignment.hs  first_prog.hs  first_prog_sln.hs  hello  hello.hi  hello.hs  monads class.docx  notekeeper.hs  session2.hs  sodokusolver.hs  test.hs  ~$skell notes.docx
Day 16/: voting.hs
Day 17/: declaring_types_classes.hs
Day 18/: functors.hs
Day 19/: functors.hs
Day 20/: monads.hs
Day 21/: IO  IO.hs
Day 22/: FortyTwo.hs  Gift.hs  IsData.hs  Typed.hs
Javascript/: Exportsimports.js  JS Fundamentals.js  index.html  index.js  person.js  utility.js
Javascript/images-gallery/frontend/: package-lock.json  package.json
Javascript/node/: index.js  package.json
Javascript/npm/: index.js  instructions.txt  package.json
Javascript/react-app/: package-lock.json
Plutus projects/: NFT.hs  SimpleTyped.hs  SimpleUntyped.hs  Simpleminting.hs  send.sh  testnet-wallet-notes.txt
Plutus_projects/: SimpleTyped.hs  Simpleminting.hs  signedpolicy.hs  start-node-testnet.sh  testnet-wallet-notes.txt
Plutus_projects/test/: Test.hs
cabal_project/greeter/: greeter.cabal
cabal_project2/greeter/: greeter.cabal
emullatortrace/: Trace.hs
modules/: Geometry_.hs  Math.hs
modules/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
notekeeperApp/notekeeper/: notekeeper.cabal
notekeeperApp/notekeeper/app/: Main.hs
notekeeperApp/notekeeper/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
types/: records.hs
(+44 files in other folders)
