cabal-version:      2.4
name:               notekeeper
version:            0.1.0.0
category:           Web
buid-type:          Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ernest404
maintainer:         ernestmuisyoo@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable notekeeper
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0, Spock, http-types, text, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
